Fix collective and unit view
